Only showing regular browser windows, not frames or iframes.
svn path=/trunk/netsurf/; revision=11366

--- a/cocoa/res/Browser.xib
+++ b/cocoa/res/Browser.xib
@@ -813,7 +813,7 @@
 					<string>{{135, 249}, {691, 632}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{135, 249}, {691, 632}}</string>
-					<integer value="1"/>
+					<boolean value="NO"/>
 					<string>{196, 240}</string>
 					<string>{{202, 428}, {480, 270}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
